[gd_scene load_steps=27 format=3 uid="uid://ba6gxi610e4tm"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_8c045"]
[ext_resource type="Texture2D" uid="uid://c8j3y3kt5t4uq" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/hurt/player-hurt-1.png" id="1_av8w6"]
[ext_resource type="Resource" uid="uid://c5a7xoyph7g7y" path="res://Resources/DefaultMovementData.tres" id="2_uuqt6"]
[ext_resource type="Texture2D" uid="uid://vg4ka2f8syfy" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/hurt/player-hurt-2.png" id="2_xy0i4"]
[ext_resource type="Texture2D" uid="uid://csfwbjq1kt7h2" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/idle/player-idle-1.png" id="3_di6t7"]
[ext_resource type="Texture2D" uid="uid://vdmp8bjq0dur" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/idle/player-idle-2.png" id="4_2n63b"]
[ext_resource type="Texture2D" uid="uid://cc1am7vtn5lav" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/idle/player-idle-3.png" id="5_ascx3"]
[ext_resource type="Texture2D" uid="uid://dwodyq1m6dk2b" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/idle/player-idle-4.png" id="6_ha715"]
[ext_resource type="Texture2D" uid="uid://t6waxdbfl00v" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/run/player-run-2.png" id="7_ohef8"]
[ext_resource type="Texture2D" uid="uid://bh5i6jfakeilr" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/run/player-run-1.png" id="8_6n780"]
[ext_resource type="Texture2D" uid="uid://crcgtxc4txsro" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/run/player-run-3.png" id="9_k4xbe"]
[ext_resource type="Texture2D" uid="uid://bf14efadofmai" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/run/player-run-4.png" id="10_vn8fq"]
[ext_resource type="Texture2D" uid="uid://debnqql6360lv" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/run/player-run-5.png" id="11_etqvt"]
[ext_resource type="Texture2D" uid="uid://cxg8lr6imv6gy" path="res://Assets/AssetsAtrapaManzanas/Assets/Jugador/run/player-run-6.png" id="12_idcdp"]
[ext_resource type="Script" path="res://Player/RemoteTransform2D.gd" id="15_da1wu"]
[ext_resource type="AudioStream" uid="uid://cpobodtp4vilv" path="res://Audio/Temporal/Jump_Sound.mp3" id="16_fw34h"]
[ext_resource type="AudioStream" uid="uid://bk01bmd5p2v58" path="res://Assets/Assets_PixelAdventure/Assets_PixelAdventure/Sounds/Hit.ogg" id="17_mks6h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_afyud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_av8w6")
}, {
"duration": 1.0,
"texture": ExtResource("2_xy0i4")
}],
"loop": true,
"name": &"hurt",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_di6t7")
}, {
"duration": 1.0,
"texture": ExtResource("4_2n63b")
}, {
"duration": 1.0,
"texture": ExtResource("5_ascx3")
}, {
"duration": 1.0,
"texture": ExtResource("6_ha715")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ohef8")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_6n780")
}, {
"duration": 1.0,
"texture": ExtResource("7_ohef8")
}, {
"duration": 1.0,
"texture": ExtResource("9_k4xbe")
}, {
"duration": 1.0,
"texture": ExtResource("10_vn8fq")
}, {
"duration": 1.0,
"texture": ExtResource("11_etqvt")
}, {
"duration": 1.0,
"texture": ExtResource("12_idcdp")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_76c3u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_afyud")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.1]
}

[sub_resource type="Animation" id="Animation_jjkvv"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_afyud")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}

[sub_resource type="Animation" id="Animation_b02jc"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_afyud")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.1]
}

[sub_resource type="Animation" id="Animation_8oxy5"]
resource_name = "jump"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_afyud")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.1]
}

[sub_resource type="Animation" id="Animation_u1o0m"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_afyud")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.38521),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pnfi8"]
_data = {
"RESET": SubResource("Animation_76c3u"),
"hurt": SubResource("Animation_jjkvv"),
"idle": SubResource("Animation_b02jc"),
"jump": SubResource("Animation_8oxy5"),
"move": SubResource("Animation_u1o0m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vw4kk"]
size = Vector2(10, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l88w2"]
size = Vector2(15, 13)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_layer = 2
collision_mask = 33
script = ExtResource("1_8c045")
movement_data = ExtResource("2_uuqt6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_afyud")
animation = &"idle"
speed_scale = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pnfi8")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -8.5)
shape = SubResource("RectangleShape2D_vw4kk")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
script = ExtResource("15_da1wu")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -13.5)
shape = SubResource("RectangleShape2D_l88w2")
debug_color = Color(1, 0, 0, 0.419608)

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_fw34h")
volume_db = -18.0
pitch_scale = 2.0

[node name="hurt_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_mks6h")
volume_db = -10.0

[node name="hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_mks6h")
volume_db = -10.0
pitch_scale = 2.0

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
